--- a/kube/deployment.yml
+++ b/kube/deployment.yml
@@ -1,21 +1,29 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: kubernetes-rails-example
-  labels:
-    app: kubernetes-rails-example
+  name: kubernetes-rails-example-deployment
 spec:
-  containers:
-  - name: kubernetes-rails-example-container
-    image: wokenqingtian/kubernetes-rails-example
-    ports:
-      - containerPort: 3000
-    env:
-      - name: RAILS_PRODUCTION_KEY
-        valueFrom:
-          secretKeyRef:
-            name: k-secrets
-            key: rails-master-key
-    envFrom:
-    - configMapRef:
-        name: kubernetes-rails-example-env
+  replicas: 4
+  selector:
+    matchLabels:
+      app: kubernetes-rails-example
+  template:
+    metadata:
+      name: kubernetes-rails-example
+      labels:
+        app: kubernetes-rails-example
+    spec:
+      containers:
+      - name: kubernetes-rails-example-container
+        image: wokenqingtian/kubernetes-rails-example
+        ports:
+          - containerPort: 3000
+        env:
+          - name: RAILS_PRODUCTION_KEY
+            valueFrom:
+              secretKeyRef:
+                name: k-secrets
+                key: rails-master-key
+        envFrom:
+        - configMapRef:
+            name: kubernetes-rails-example-env
